--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+    <modelVersion>4.0.0</modelVersion>
     <groupId>coding</groupId>
     <artifactId>travelboard</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>TravelBoard</name>
+    <name>travelboard</name>
 
         <properties>
             <java-version>1.8</java-version>
-            <org.springframework-version>4.0.3.RELEASE</org.springframework-version>
+            <org.springframework-version>4.1.5.RELEASE</org.springframework-version>
             <org.aspectj-version>1.7.4</org.aspectj-version>
             <org.slf4j-version>1.7.5</org.slf4j-version>
             <hibernate.version>4.3.5.Final</hibernate.version>
@@ -152,7 +150,7 @@
         </dependencies>
 
         <build>
-            <finalName>TravelBoard</finalName>
+            <finalName>travelboard</finalName>
             <plugins>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
